# ellipsoidal_inclusion_analysis

./: README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yaml
core/: displacement_calculation.py  disturbed_strain.py  eigenstrain.py  eshelby_tensor.py  material_properties.py  strain_calculation.py  stress_calculation.py
tests/: test_displacement_calculation.py  test_disturbed_strain.py  test_eigenstrain.py  test_eshelby_tensor.py  test_material_properties.py  test_strain_calculation.py  test_stress_calculation.py
utils/: utils.py  visualization_2d.py  visualization_3d.py
